--- a/package.json
+++ b/package.json
@@ -1,68 +1,70 @@
 {
-	"name": "team-slice",
-	"version": "0.1.0",
-	"private": true,
-	"homepage": "https://lluitiy.github.io/TeamSlice/",
-	"dependencies": {
-		"@date-io/date-fns": "^2.16.0",
-		"@date-io/dayjs": "^2.16.0",
-		"@emotion/react": "^11.10.4",
-		"@emotion/styled": "^11.10.4",
-		"@mui/material": "^5.10.10",
-		"@mui/x-date-pickers": "^5.0.5",
-		"@reduxjs/toolkit": "^1.8.6",
-		"@testing-library/jest-dom": "^5.16.3",
-		"@testing-library/react": "^12.1.4",
-		"@testing-library/user-event": "^13.5.0",
-		"axios": "^1.1.3",
-		"date-fns": "^2.29.3",
-		"dayjs": "^1.11.6",
-		"formik": "^2.2.9",
-		"moment": "^2.29.4",
-		"nanoid": "^4.0.0",
-		"notiflix": "^3.2.5",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
-		"react-icons": "^4.6.0",
-		"react-localization": "^1.0.19",
-		"react-rainbow-components": "^1.31.0",
-		"react-redux": "^8.0.4",
-		"react-responsive": "^9.0.0",
-		"react-router-dom": "^6.4.2",
-		"react-scripts": "5.0.1",
-		"react-star-ratings": "^2.3.0",
-		"react-toastify": "^9.0.8",
-		"recharts": "^2.1.15",
-		"redux-persist": "^6.0.0",
-		"web-vitals": "^2.1.3",
-		"yup": "^0.32.11"
-	},
-	"scripts": {
-		"start": "set PORT=7737 && react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"lint:js": "eslint src/**/*.{js,jsx}"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@emotion/babel-plugin": "^11.10.2"
-	}
+  "name": "team-slice",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://lluitiy.github.io/TeamSliceNetlify/",
+  "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
+    "@date-io/dayjs": "^2.16.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.10",
+    "@mui/x-date-pickers": "^5.0.5",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.6",
+    "formik": "^2.2.9",
+    "moment": "^2.29.4",
+    "nanoid": "^4.0.0",
+    "notiflix": "^3.2.5",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.6.0",
+    "react-localization": "^1.0.19",
+    "react-rainbow-components": "^1.31.0",
+    "react-redux": "^8.0.4",
+    "react-responsive": "^9.0.0",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
+    "react-toastify": "^9.0.8",
+    "recharts": "^2.1.15",
+    "redux-persist": "^6.0.0",
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
+  },
+  "scripts": {
+    "start": "set PORT=7737 && react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint:js": "eslint src/**/*.{js,jsx}",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy -p"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.2"
+  }
 }
